tests/src/frontend/typechecking/invalid/infer_frozen_fun_4.sk
fun foo<T: frozen>(T): Array<T> {
  Array[]
}
fun test(): void {
  _ = foo(mutable Array[])
}
